--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "framer-motion": "^11.11.9",
     "next": "15.0.1",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-icons": "^5.3.0",
+    "remixicon-react": "^1.0.0"
   },
   "devDependencies": {
     "@types/node": "^20",
