--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@types/reactjs-localstorage": "^1.0.2",
     "framer-motion": "^11.11.9",
     "next": "15.0.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
+    "reactjs-localstorage": "^1.0.1",
     "remixicon-react": "^1.0.0"
   },
   "devDependencies": {
